--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="navbar">
+        <span>
+         <img src="nav2.png" class="nav2">
+     </span>
+        <span><a>Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         <a>Product</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         <a>Case Study</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+         <a>Blog</a>
+       </span>
+     <div>
+     <button id="requ">Request Collab</button>
+     </div>
+     </div>
 </body>
 </html>
