--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="navbar">
@@ -19,5 +20,19 @@
      <button id="requ">Request Collab</button>
      </div>
      </div>
+     <div class="container">
+        <div id="box">
+            <h3>INFLUENCER MARKETING</h3>
+            <h1><b>Get Your Business <br>Seen by Millions <br>of People</b></h1>
+           <span> <img id="img" src="asterisk.jpeg" alt="icon"></span>
+            <p>Lowlevel connects brands with influencers, making it easy to get your <br>business seen by millions</p><br>
+            <button class="down">Download iOS App</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <span>Start a campaign</span>
+        </div>
+        <div>
+            <img src="https://media.istockphoto.com/id/1846552208/photo/male-hands-holding-phone-with-blank-screen-isolated.jpg?s=612x612&w=0&k=20&c=Nsaa1E7rwf8cYXNdNm1S43QvUdcjGe8RFkLl8bafmiM=" alt="phone image">
+        </div>
+        </div>
+
 </body>
 </html>
