--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="navbar">
         <span>
-         <img src="nav2.png" class="nav2">
+         <img src="Images/icon.png" class="nav2">
      </span>
         <span><a>Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
          <a>Product</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -24,7 +24,7 @@
         <div id="box">
             <h3>INFLUENCER MARKETING</h3>
             <h1><b>Get Your Business <br>Seen by Millions <br>of People</b></h1>
-           <span> <img id="img" src="asterisk.jpeg" alt="icon"></span>
+           <span> <img id="img" src="Images/asterisk.png" alt="icon"></span>
             <p>Lowlevel connects brands with influencers, making it easy to get your <br>business seen by millions</p><br>
             <button class="down">Download iOS App</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <span>Start a campaign</span>
